iptables
# Generated by iptables-save v1.4.7 on Sat Apr 15 01:38:43 2017
*nat
:PREROUTING ACCEPT [2550:153028]
:POSTROUTING ACCEPT [36:2296]
:OUTPUT ACCEPT [36:2296]
COMMIT
# Completed on Sat Apr 15 01:38:43 2017
# Generated by iptables-save v1.4.7 on Sat Apr 15 01:38:43 2017
*raw
:PREROUTING ACCEPT [75943:106152185]
:OUTPUT ACCEPT [44953:3268448]
COMMIT
# Completed on Sat Apr 15 01:38:43 2017
# Generated by iptables-save v1.4.7 on Sat Apr 15 01:38:43 2017
*mangle
:PREROUTING ACCEPT [75943:106152185]
:INPUT ACCEPT [75943:106152185]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44953:3268448]
:POSTROUTING ACCEPT [44953:3268448]
COMMIT
# Completed on Sat Apr 15 01:38:43 2017
# Generated by iptables-save v1.4.7 on Sat Apr 15 01:38:43 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
# -A INPUT -p icmp --icmp-type any -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# -A INPUT -p udp -m state --state NEW -m udp --dport 22 -j ACCEPT 
# -A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 8081 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8081 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 15751 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 15751 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sat Apr 15 01:38:43 2017
