iptables.rules
# Generated by iptables-save v1.4.21 on Fri Jan 26 23:03:05 2018
*nat
:PREROUTING ACCEPT [41:2289]
:POSTROUTING ACCEPT [14:894]
:OUTPUT ACCEPT [14:894]
COMMIT
# Completed on Fri Jan 26 23:03:05 2018
# Generated by iptables-save v1.4.21 on Fri Jan 26 23:03:05 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
# -A INPUT -p icmp --icmp-type any -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# -A INPUT -p udp -m state --state NEW -m udp --dport 22 -j ACCEPT 
# -A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 51285 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 51285 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 51287 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 51287 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Fri Jan 26 23:03:05 2018
# Generated by iptables-save v1.4.21 on Fri Jan 26 23:03:05 2018
*mangle
:PREROUTING ACCEPT [46859:68959216]
:INPUT ACCEPT [46859:68959216]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [35310:2447947]
:POSTROUTING ACCEPT [35310:2447947]
COMMIT
# Completed on Fri Jan 26 23:03:05 2018
# Generated by iptables-save v1.4.21 on Fri Jan 26 23:03:05 2018
*raw
:PREROUTING ACCEPT [46859:68959216]
:OUTPUT ACCEPT [35310:2447947]
COMMIT
# Completed on Fri Jan 26 23:03:05 2018
